--- a/YcTeam.MVCSite/Views/InStorageReceive/CreateInStorageReceive.cshtml
+++ b/YcTeam.MVCSite/Views/InStorageReceive/CreateInStorageReceive.cshtml
@@ -25,16 +25,10 @@
 
     <div class="form-group-select">
         @Html.LabelFor(model => model.ProviderId, htmlAttributes: new { @class = "control-label col-md-2" })
-        @if (ViewBag.ProviderList != null)
-        {
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ProviderId, ViewBag.ProviderList as List<SelectListItem>, new
-                {
-                    @class = "dropdown",
-                    @style = "width:100%;height:32px;font-size:14px;"
-                })
-            </div>
-        }
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ProviderId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ProviderId, "", new { @class = "text-danger" })
+        </div>
     </div>
 
     <div class="form-group">
